ProGuard Enable, Ads Added, v1 published

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Train Schedule</string>
+
+    <string name="addMobAppId">ca-app-pub-3587158661072906~5513481656</string>
+    <string name="bannerBottomId">ca-app-pub-3587158661072906/6990214851</string>
 </resources>
